# django_tutorial

./: .gitignore  README.md  pyproject.toml
django_tutor/: asgi.py  settings.py  urls.py  wsgi.py
polls/migrations/: 0001_initial.py
