[tool.poetry]
name = "django-tutor"
version = "0.1.0"
description = ""
authors = ["Alex Berezhnoy <buffalo.on.moss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
